Changed how we handle success checks in locking events.  The previous code appeared to record all attempts as successful.
git-svn-id: https://fluid.surelogic.com/svn/eng/trunk/flashlight-common@11580 d02ae147-ee12-4a35-9452-91c89e8b2592